Changed fonts, fixed letter spacing, added a background image.

--- a/scss/partials/layout.scss
+++ b/scss/partials/layout.scss
@@ -4,7 +4,7 @@ body{
 	justify-content: center;
 	align-content: center;
 	font-family: 'Lato', sans-serif;
-	background-color: rgb(128, 9, 9);
+	background-image: url('/css/bg.png');
 	color: rgb(255,255,255);
 
 	button{
@@ -13,12 +13,20 @@ body{
 		border: none;
 		border-radius: 8px;
 		font-size: 2em;
+		letter-spacing: 0.125em;
 		padding: 15px;
+}
+
+	button:hover {
+ 	color: rgb(26,43,43);
+  background-color: rgb(255,255,255);
+ 
 	}
 }
 
 #header{
-	background-color: rgb(102, 17, 17);
+	background-color: rgb(128, 9, 9);
+	// background-color: rgb(102, 17, 17);
 	flex: 0 0 auto;
 	display: flex;
 	flex-flow: row-wrap;
@@ -31,7 +39,8 @@ body{
 		width: 90%;
 		text-align: center;
 		font-size: 5em;
-		font-family: 'Oswald', sans-serif;
+		font-family: 'Frijole', cursive;
+		letter-spacing: 0.125em;
 	}
 }
 
@@ -54,6 +63,7 @@ body{
 		margin-top: 25px;
 
 		font-size: 2em;
+		letter-spacing: 0.125em;
 	}
 
 	//dropdown for content selection
@@ -66,9 +76,10 @@ body{
 		align-self: center;
 		width: 90%;
 		height: 50px;
-		margin-top: 10px;
+		margin-top: 15px;
 		
 		font-size: 2em;
+		letter-spacing: 0.125em;
 	}
 
 	#postComments{
@@ -80,9 +91,10 @@ body{
 		align-self: center;
 		width: 90%;
 		height: 50px;
-		margin-top: 10px;
+		margin-top: 15px;
 		
 		font-size: 2em;
+		letter-spacing: 0.125em;
 	}
 
 	#generate{
@@ -93,7 +105,7 @@ body{
 
 		//placement
 		width: 25%;
-		margin: 10px 0;
+		margin: 15px 0;
 	}
 }
 
@@ -107,7 +119,10 @@ body{
 	width: 90%;
 	font-family: 'Lato', sans-serif;
 	font-size: 2em;
-	padding-top: 100px;
+	padding-top: 75px;
+	background-color: rgb(255,255,255);
+	color: rgb(0,0,0);
+	margin-bottom: 50px;
 
 	#title{
 		//flex for child of #content
@@ -115,8 +130,10 @@ body{
 		order: 2;
 
 		text-align: center;
-		font-family: 'Oswald', sans-serif;
+		font-family: 'Frijole', cursive;
 		font-size: 3em;
+		letter-spacing: 0.125em;
+		color: rgb(26, 43, 43);
 		margin: 15px 0;
 		width: 100%;
 	}
@@ -130,24 +147,24 @@ body{
 		height: auto;
 		display: flex;
 		justify-content: space-around;
-		padding-bottom: 50px;
+		padding-bottom: 25px;
 	}
 
 	#subtitle{
 		flex: 0 0 90%;
 		order: 3;
-		margin: 5px 0;
+		margin: 15px 0;
 		display: flex;
-		justify-content: space-around;
-		margin-bottom: 100px;
+		justify-content: space-between;
+		margin-bottom: 50px;
 	}
 
 	#comments{
 		flex: 0 0 90%;
 		order: 4;
 
-		line-height: 1.5em;
-		margin-bottom: 25px;
+		line-height: 1em;
+		margin-bottom: 50px;
 	}
 }
 
